--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@
   left: 0px;
   top: 0px;
   z-index: 5;
-  background: #eb5757;
+  background: #E73361;
 }
 
 .logo {
@@ -71,7 +71,7 @@
 }
 .button1 {
   position: absolute;
-  margin: 0 10px;
+  margin: 0 30px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -79,19 +79,20 @@
   width: 148px;
   height: 39px;
   top: 450px;
-  background: #eb5757;
+  background: #E73361;
   border-radius: 5px;
 }
 .button2 {
   position: absolute;
   display: flex;
+  margin: 0 200px;
   justify-content: center;
   align-items: center;
   z-index: 3;
   width: 148px;
   height: 39px;
   top: 450px;
-  background: #eb5757;
+  background: #E73361;
   border-radius: 5px;
 }
 .textbutton1 {
@@ -137,7 +138,7 @@
   left: 0px;
   height: 618px;
   width: 100%;
-  background: #eb5757;
+  background: #E73361;
   display: flex;
   justify-content: center;
 }
@@ -195,7 +196,7 @@
   top: 450px;
   width: 244px;
   height: 41px;
-  background: #eb5757;
+  background: #E73361;
   box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.25);
   border-radius: 5px;
   display: flex;
@@ -256,7 +257,7 @@
   left: 0px;
   height: 650px;
   width: 100%;
-  background: #eb5757;
+  background: #E73361;
   display: flex;
   justify-content: center;
 }
@@ -280,7 +281,7 @@
   z-index: 2;
   top: 4446px;
   left: 0px;
-  height: 590px;
+  height: 490px;
   width: 100%;
   background: #faf0f0;
 }
@@ -291,7 +292,7 @@
   top: 231px;
   height: 29px;
   width: 100%;
-  background: #eb5757;
+  background: #E73361;
   margin: 2px auto;
   color: #faf0f0;
   display: flex;
@@ -305,7 +306,7 @@
   top: 262px;
   height: 29px;
   width: 100%;
-  background: #eb5757;
+  background: #E73361;
   margin: 2px auto;
   color: #faf0f0;
   display: flex;
@@ -319,7 +320,7 @@
   top: 293px;
   height: 29px;
   width: 100%;
-  background: #eb5757;
+  background: #E73361;
   margin: 2px auto;
   color: #faf0f0;
   display: flex;
@@ -343,7 +344,7 @@
   z-index: 3;
   height: 52px;
   width: 52px;
-  background: #eb5757;
+  background: #E73361;
   margin: 0px 5px;
   display: flex;
   justify-content: center;
@@ -353,7 +354,7 @@
   z-index: 3;
   height: 52px;
   width: 52px;
-  background: #eb5757;
+  background: #E73361;
   margin: 0px 5px;
   display: flex;
   justify-content: center;
@@ -363,7 +364,7 @@
   z-index: 3;
   height: 52px;
   width: 52px;
-  background: #eb5757;
+  background: #E73361;
   margin: 0px 5px;
   display: flex;
   justify-content: center;
