--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
   font-family: "Roboto Slab";
   position: absolute;
   justify-content: center;
+  left: 0;
 
   /*grid-template-rows: 62px 750px 1095px 618px 521px 750px 650px 264px;*/
 }
@@ -12,13 +13,12 @@
 .div1 {
   position: fixed;
   display: flex;
-  grid-template-columns: 70% 30%;
   height: 62px;
   width: 100%;
   left: 0px;
   top: 0px;
   z-index: 5;
-  background: #E73361;
+  background: #e73361;
 }
 
 .logo {
@@ -82,7 +82,21 @@
   width: 148px;
   height: 39px;
   top: 450px;
-  background: #E73361;
+  background: #e73361;
+  border-radius: 5px;
+}
+.button1:hover {
+  position: absolute;
+  margin: 0 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 3;
+  width: 148px;
+  height: 39px;
+  top: 450px;
+  color: #e73361;
+  background: #white;
   border-radius: 5px;
 }
 .button2 {
@@ -95,7 +109,21 @@
   width: 148px;
   height: 39px;
   top: 450px;
-  background: #E73361;
+  background: #e73361;
+  border-radius: 5px;
+}
+.button2:hover {
+  position: absolute;
+  display: flex;
+  margin: 0 200px;
+  justify-content: center;
+  align-items: center;
+  z-index: 3;
+  width: 148px;
+  height: 39px;
+  top: 450px;
+  color: #e73361;
+  background: #white;
   border-radius: 5px;
 }
 .textbutton1 {
@@ -141,7 +169,7 @@
   left: 0px;
   height: 618px;
   width: 100%;
-  background: #E73361;
+  background: #e73361;
   display: flex;
   justify-content: center;
 }
@@ -199,7 +227,7 @@
   top: 450px;
   width: 244px;
   height: 41px;
-  background: #E73361;
+  background: #e73361;
   box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.25);
   border-radius: 5px;
   display: flex;
@@ -260,7 +288,7 @@
   left: 0px;
   height: 650px;
   width: 100%;
-  background: #E73361;
+  background: #e73361;
   display: flex;
   justify-content: center;
 }
@@ -295,7 +323,7 @@
   top: 231px;
   height: 29px;
   width: 100%;
-  background: #E73361;
+  background: #e73361;
   margin: 2px auto;
   color: #faf0f0;
   display: flex;
@@ -309,7 +337,7 @@
   top: 262px;
   height: 29px;
   width: 100%;
-  background: #E73361;
+  background: #e73361;
   margin: 2px auto;
   color: #faf0f0;
   display: flex;
@@ -323,7 +351,7 @@
   top: 293px;
   height: 29px;
   width: 100%;
-  background: #E73361;
+  background: #e73361;
   margin: 2px auto;
   color: #faf0f0;
   display: flex;
@@ -347,7 +375,7 @@
   z-index: 3;
   height: 52px;
   width: 52px;
-  background: #E73361;
+  background: #e73361;
   margin: 0px 5px;
   display: flex;
   justify-content: center;
@@ -357,7 +385,7 @@
   z-index: 3;
   height: 52px;
   width: 52px;
-  background: #E73361;
+  background: #e73361;
   margin: 0px 5px;
   display: flex;
   justify-content: center;
@@ -367,7 +395,7 @@
   z-index: 3;
   height: 52px;
   width: 52px;
-  background: #E73361;
+  background: #e73361;
   margin: 0px 5px;
   display: flex;
   justify-content: center;
