--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+@media only screen and (max-width: 600px) {
+  body {
+    background-color: lightblue;
+  }
+}
+
 .homepage {
   width: 100%;
   background-color: #faf0f0;
@@ -106,7 +112,7 @@
   height: 39px;
   top: 450px;
   color: #e73361;
-  background: white;
+  background: #faf0f0;
   border-radius: 5px;
 }
 .textbutton2:hover {
@@ -144,7 +150,7 @@
   height: 39px;
   top: 450px;
   color: #e73361;
-  background: white;
+  background: #faf0f0;
   border-radius: 5px;
 }
 .textbutton1 {
@@ -156,13 +162,13 @@
 
 .div3 {
   position: absolute;
+  display: flex;
+  justify-content: center;
   z-index: 2;
   top: 812px;
   height: 1095px;
   width: 100%;
   position: absolute;
-  display: flex;
-  justify-content: center;
 }
 .juduldiv3 {
   position: absolute;
@@ -180,7 +186,7 @@
 }
 .scroll {
   position: absolute;
-  top: 100px;
+  top: 75px;
 }
 
 .div4 {
@@ -248,7 +254,7 @@
   font-style: normal;
   font-weight: bold;
   font-size: 22px;
-  top: 450px;
+  top: 425px;
   width: 244px;
   height: 41px;
   background: #e73361;
@@ -261,7 +267,7 @@
 }
 .button3:hover {
   position: absolute;
-  top: 450px;
+  top: 425px;
   width: 244px;
   height: 41px;
   background: white;
@@ -353,6 +359,7 @@
   height: 490px;
   width: 100%;
   background: #faf0f0;
+  font-weight: bold;
 }
 
 .about {
@@ -364,6 +371,20 @@
   background: #e73361;
   margin: 2px auto;
   color: #faf0f0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.about:hover {
+  position: absolute;
+  z-index: 3;
+  top: 231px;
+  height: 29px;
+  width: 100%;
+  background: white;
+  margin: 2px auto;
+  color: #e73361;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -383,6 +404,20 @@
   align-items: center;
 }
 
+.joinus:hover {
+  position: absolute;
+  z-index: 3;
+  top: 262px;
+  height: 29px;
+  width: 100%;
+  background: #faf0f0;
+  margin: 2px auto;
+  color: #e73361;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .contact {
   position: absolute;
   z-index: 3;
@@ -392,6 +427,20 @@
   background: #e73361;
   margin: 2px auto;
   color: #faf0f0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.contact:hover {
+  position: absolute;
+  z-index: 3;
+  top: 293px;
+  height: 29px;
+  width: 100%;
+  background: #faf0f0;
+  margin: 2px auto;
+  color: #e73361;
   display: flex;
   justify-content: center;
   align-items: center;
