--- a/src/Components/Carousel/Carousel.css
+++ b/src/Components/Carousel/Carousel.css
@@ -5,18 +5,19 @@
 }
 
 .main-carousel {
-  background: white;
+  background: #faf0f0;
+  border-radius: 5px;
   margin: auto auto;
   z-index: 5;
-  width: 100%;
+  width: 327px;
   height: 327px;
 }
 
 .carousel-cell {
-  width: 50%;
+  width: 327px;
   height: 327px;
-  background: white;
   border-radius: 5px;
+  background: #faf0f0;
   counter-increment: carousel-cell;
   display: flex;
   align-items: center;
