--- a/src/Components/Carousel/Carousell2.css
+++ b/src/Components/Carousel/Carousell2.css
@@ -1,11 +1,19 @@
-  
-  .carousel-cell2 {
-    width: 50%;
-    height: 327px;
-    background: white;
-    border-radius: 5px;
-    counter-increment: carousel-cell2;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
+.main-carousel2 {
+  background: #faf0f0;
+  margin: auto auto;
+  z-index: 5;
+  width: 100%;
+  height: 327px;
+}
+.carousel-cell2 {
+  width: 244px;
+  height: 295px;
+  margin: auto 20px;
+  box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.25);
+  background: white;
+  border-radius: 5px;
+  counter-increment: carousel-cell2;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
