--- a/src/Components/Carousel/Carousell3.css
+++ b/src/Components/Carousel/Carousell3.css
@@ -8,11 +8,11 @@
 }
 
 .carousel-cell3 {
-  width: 375px;
+  width: 95%;
   height: 490px;
   margin: auto 30%;
   border-radius: 5px;
-  background: white;
+  background: #e73361;
   counter-increment: carousel-cell3;
   display: flex;
   align-items: center;
