--- a/src/Components/Carousel/Carousell3.css
+++ b/src/Components/Carousel/Carousell3.css
@@ -1,55 +1,26 @@
-.main-carousel3 {
-  background: #e73361;
-  border-radius: 5px;
-  margin: auto auto;
-  z-index: 5;
-  width: 100%;
-  height: 490px;
-}
-
-.carousel-cell3 {
-  width: 95%;
-  height: 490px;
-  margin: auto 30%;
-  border-radius: 5px;
-  background: #e73361;
-  counter-increment: carousel-cell3;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-/* cell number */
-.carousel-cell3:before {
-  display: block;
-  text-align: center;
-  content: counter(carousel-cell3);
-  line-height: 200px;
-  font-size: 80px;
+.slick-next {
+  right: 20px;
+  background: transparent;
   color: white;
 }
-
-/* position dots up a bit */
-.flickity-page-dots {
-  bottom: -22px;
-}
-/* dots are lines */
-.flickity-page-dots .dot {
-  height: 4px;
-  width: 40px;
-  margin: 0;
-  border-radius: 0;
-  background-color: white;
-}
-
-/* no circle */
-.flickity-button {
+.slick-prev {
+  left: 0px;
   background: transparent;
 }
-.flickity-button-icon {
-  fill: white;
+
+.slick-next:before {
+  color: white;
+  font-size: 40px;
 }
 
-.flickity-button:hover {
-  background: transparent;
+.slick-prev:before {
+  color: white;
+  font-size: 40px;
+}
+
+.slick-list {
+  margin-top: 150px;
+  width: 75%;
+  margin-left: auto;
+  margin-right: auto;
 }
