--- a/src/Components/Carousel/Carousell2.css
+++ b/src/Components/Carousel/Carousell2.css
@@ -15,5 +15,9 @@
   counter-increment: carousel-cell2;
   display: flex;
   align-items: center;
-  justify-content: center;
+}
+
+.img {
+  object-fit: cover;
+  border-radius: 5px;
 }
