--- a/src/Components/Carousel/Carousell3.css
+++ b/src/Components/Carousel/Carousell3.css
@@ -19,8 +19,21 @@
 }
 
 .slick-list {
-  margin-top: 150px;
+  margin-top: 25px;
   width: 75%;
   margin-left: auto;
   margin-right: auto;
+}
+
+.photo {
+  margin-bottom: 25px;
+  margin-left: auto;
+  margin-right: auto;
+  top: 100px;
+  height: 125px;
+  width: 125px;
+  z-index: 3;
+  color: #faf0f0;
+  border-radius: 100px;
+  background-color: #faf0f0;
 }
